Tests requiring self signed certificate run on Java 21 with latest Play milestone