@@ -56,8 +56,6 @@ scalaVersion := "2.13.16"
 crossScalaVersions := Seq("2.13.16", "3.3.6")
 scalacOptions ++= List("-encoding", "utf8", "-deprecation", "-feature", "-unchecked")
 javacOptions ++= List("-Xlint:unchecked", "-Xlint:deprecation")
-// Needed for ssl-config to create self signed certificated under Java 17
-Test / javaOptions ++= List("--add-exports=java.base/sun.security.x509=ALL-UNNAMED")
 
 val CompileDeps = Seq(
   guice,
